# galay-sdk

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README-CN.md  README.md  manifest.json
galay-etcd/: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  plan.md
galay-etcd/benchmark/: AsyncBenchmarkSupport.cc  AsyncBenchmarkSupport.h  B1-etcd_kv_benchmark.cc  B2-async_etcd_kv_benchmark.cc  CMakeLists.txt
galay-etcd/cmake/: galay-etcd-compat-config.cmake.in  galay-etcd-config.cmake.in  option.cmake
galay-etcd/docs/: 00-快速开始.md  01-架构设计.md  02-API参考.md  03-使用指南.md  04-示例代码.md  05-性能测试.md  06-高级主题.md  07-常见问题.md  README.md  release_note.md
galay-etcd/examples/: CMakeLists.txt
galay-etcd/galay-etcd/: CMakeLists.txt
galay-etcd/scripts/: S2-Bench-Rust-Compare.sh  inspect_keepalive.sh  manual_smoke.sh
galay-etcd/test/: CMakeLists.txt  T1-etcd_smoke.cc  T2-etcd_prefix_ops.cc  T3-etcd_pipeline.cc  T4-async_etcd_smoke.cc  T5-async_etcd_pipeline.cc  T6-etcd_internal_helpers.cc  T7-etcd_awaitable_surface.cc  T8-async_benchmark_smoke.cc
galay-http/: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
galay-http/benchmark/: B1-HttpServer.cc  B10-H2cMuxServer.cc  B11-H2cMuxClient.cc  B12-H2Server.cc  B13-H2Client.cc  B14-HttpsServer.cc  B15-HeaderParsing.cc  B2-HttpClient.cc  B3-H2cServer.cc  B4-H2cClient.cc  B5-WebsocketServer.cc  B6-WebsocketClient.cc  B7-WssServer.cc  B8-WssClient.cc  B9-HpackBench.cc  CMakeLists.txt  WssBenchStats.h
galay-http/cert/: test.crt  test.key
galay-http/cmake/: GalayHttpConfig.cmake.in  RunTestBinary.cmake  galay-http-config.cmake.in  options.cmake
galay-http/docs/: 00-快速开始.md  01-架构设计.md  02-API参考.md  03-使用指南.md  04-示例代码.md  05-性能测试.md  06-高级主题.md  07-常见问题.md  README.md  release_note.md
galay-http/examples/: CMakeLists.txt  README.md
galay-http/galay-http/: CMakeLists.txt
galay-http/html/: EtagCache.html  ResumeDownload.html
galay-http/scripts/: P1-GenHuffmanDecodeTable.py  S1-Run.sh  S2-Check.sh  S3-BenchmarkStaticFiles.sh  S4-TestRangeEtagManual.sh  S5-TestRangeEtagStress.sh  h2_python_echo_server.py
galay-http/test/: CMakeLists.txt  T1-http_parser.cc  T10-chunked_client.cc  T11-http_router.cc  T12-http_router_validation.cc  T13-mount_functions.cc  T14-static_file_transfer_modes.cc  T15-range_etag_server.cc  T16-http_client_timeout.cc  T17-test_timeout.cc  T18-ws_server.cc  T19-ws_client.cc  T2-Chunk.cc  T20-websocket_client.cc  T21-https_server.cc  T22-https_client.cc  T23-https_stress_test.cc  T24-simple_https_test.cc  T25-h2c_client.cc  T26-h2c_server.cc  T27-proxy_try_files_e2_e.cc  T28-h2_server.cc  T29-h2_client.cc  T3-reader_writer_server.cc  T30-h2_error_model.cc  T31-h2_frame_codec.cc  T32-h2_hpack.cc  T33-h2_connection_core_lifecycle.cc  T34-h2_dispatcher_state_machine.cc  T35-h2_flow_control.cc  T36-h2_timer_behavior.cc  T37-h2_frame_builder_bytes.cc  T38-h2_shutdown_batch_rst.cc  T39-header_fast_path.cc  T4-reader_writer_client.cc  T40-client_header_case.cc  T41-h2_close_tcp_teardown.cc  T42-h2_active_conn_preferred.cc  T43-h2c_client_shutdown.cc  T44-h2_active_conn_retire.cc  (+39 more)
galay-kernel/: .bazelrc  .gitignore  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE  galay-kernel-config.cmake.in
galay-kernel/benchmark/: B1-compute_scheduler.cc  B10-Ringbuffer.cc  B11-tcp_iov_server.cc  B12-tcp_iov_client.cc  B13-Sendfile.cc  B14-scheduler_injected_wakeup.cc  B2-tcp_server.cc  B3-tcp_client.cc  B4-udp_server.cc  B5-udp_client.cc  B6-Udp.cc  B7-file_io.cc  B8-mpsc_channel.cc  B9-unsafe_channel.cc  BenchmarkSync.h  CMakeLists.txt
galay-kernel/cmake/: option.cmake
galay-kernel/docs/: 00-快速开始.md  01-架构设计.md  02-API参考.md  03-使用指南.md  04-示例代码.md  05-性能测试.md  06-高级主题.md  07-常见问题.md  08-计算调度器.md  09-UDP性能测试.md  10-调度器.md  11-协程.md  12-网络IO.md  13-文件IO.md  14-并发.md  15-定时器调度器.md  16-环形缓冲区.md  17-零拷贝发送文件.md  18-运行时Runtime.md  19-文件监控.md  20-异步同步原语.md  README.md  release_note.md
galay-kernel/examples/: CMakeLists.txt
galay-kernel/galay-kernel/: CMakeLists.txt
galay-kernel/scripts/: README.md  benchmark_timeout.sh  parse_benchmark_triplet.py  run_benchmark_matrix.sh  run_benchmark_triplet.sh  run_single_benchmark_triplet.sh  run_test_matrix.sh
galay-kernel/test/: CMakeLists.txt  MpscChannelTestAccess.h  SchedulerTestAccess.h  StdoutLog.h  T1-task_chain.cc  T10-compute_scheduler.cc  T100-chase_lev_ring_steal_pop_stress.cc  T101-runtime_io_steal_stats.cc  T102-ioscheduler_local_deferred_fifo.cc  T103-chase_lev_ring_shutdown_release.cc  T104-io_uring_steal_disabled_source_case.cc  T105-runtime_fastpath_source_case.cc  T106-epoll_lazy_registration_source_case.cc  T107-io_uring_multishot_accept_source_case.cc  T108-io_uring_multishot_accept_runtime.cc  T109-tcp_defer_accept_source_case.cc  T11-mixed_scheduler.cc  T110-io_uring_multishot_recv_source_case.cc  T111-io_uring_multishot_recv_runtime.cc  T112-runtime_reuseport_source_case.cc  T113-io_uring_send_zc_source_case.cc  T114-io_uring_send_zc_runtime.cc  T115-runtime_task_storage_source_case.cc  T116-concurrent_connect_fanout.cc  T116-io_controller_sqe_state_source_case.cc  T117-same_scheduler_connect_accept_fanout.cc  T118-sequence_fanout_exchange.cc  T119-mixed_connect_builder_stress.cc  T12-async_mutex.cc  T120-runtime_woken_task_owner_thread.cc  T13-mpsc_channel.cc  T14-timing_wheel.cc  T15-unsafe_channel.cc  T16-timer_scheduler.cc  T17-readv_writev.cc  T18-ringbuffer_io.cc  T19-sendfile_basic.cc  T2-tcp_socket.cc  T20-spawn_simple.cc  T21-concurrent_recv_send.cc  (+87 more)
galay-mcp/: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  galay-mcp-config.cmake.in
galay-mcp/benchmark/: B1-stdio_performance.cc  B2-http_performance.cc  B3-concurrent_requests.cc  CMakeLists.txt
galay-mcp/cmake/: option.cmake
galay-mongo/: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
galay-mysql/: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
galay-redis/: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  galay-redis-config.cmake.in
galay-rpc/: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  galay-rpc-config.cmake.in
(+615 files in other folders)
