cmake_minimum_required(VERSION 3.20)
project(galay-etcd VERSION 1.1.7 LANGUAGES CXX)

set(CMAKE_FIND_PACKAGE_PREFER_CONFIG ON)
set(CMAKE_NO_SYSTEM_FROM_IMPORTED ON)

include(cmake/option.cmake)
include(CTest)

message(STATUS "GALAY_ETCD_CXX_STANDARD: ${GALAY_ETCD_CXX_STANDARD}")
message(STATUS "GALAY_ETCD_BUILD_SHARED_LIBS: ${GALAY_ETCD_BUILD_SHARED_LIBS}")
message(STATUS "GALAY_ETCD_INSTALL_MODULE_INTERFACE: ${GALAY_ETCD_INSTALL_MODULE_INTERFACE}")
message(STATUS "GALAY_ETCD_IMPORT_COMPILATION_ENABLED: ${GALAY_ETCD_IMPORT_COMPILATION_ENABLED}")
message(STATUS "BUILD_TESTING: ${BUILD_TESTING}")
message(STATUS "BUILD_TESTS (compat): ${BUILD_TESTS}")
message(STATUS "GALAY_ETCD_BUILD_TESTS (compat): ${GALAY_ETCD_BUILD_TESTS}")
message(STATUS "GALAY_ETCD_BUILD_BENCHMARKS: ${GALAY_ETCD_BUILD_BENCHMARKS}")
message(STATUS "GALAY_ETCD_BUILD_EXAMPLES: ${GALAY_ETCD_BUILD_EXAMPLES}")

add_subdirectory(galay-etcd)

if(BUILD_TESTING)
    add_subdirectory(test)
endif()

if(GALAY_ETCD_BUILD_BENCHMARKS)
    add_subdirectory(benchmark)
endif()

if(GALAY_ETCD_BUILD_EXAMPLES)
    add_subdirectory(examples)
endif()
