cmake_minimum_required(VERSION 3.16)

project(galay-kernel VERSION 3.4.5 LANGUAGES CXX)

# 设置C++标准
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# 构建选项 / 平台选项
include(cmake/option.cmake)

# 使用标准 BUILD_TESTING 作为测试主入口；未显式开启时默认关闭。
# 保留 BUILD_TESTS 作为兼容别名，避免旧脚本立即失效。
set(GALAY_KERNEL_BUILD_TESTS_COMPAT FALSE)
if(DEFINED BUILD_TESTS AND NOT DEFINED BUILD_TESTING)
    set(BUILD_TESTING ${BUILD_TESTS} CACHE BOOL "Build the testing tree." FORCE)
    set(GALAY_KERNEL_BUILD_TESTS_COMPAT TRUE)
elseif(NOT DEFINED BUILD_TESTING)
    set(BUILD_TESTING OFF CACHE BOOL "Build the testing tree." FORCE)
endif()

# 在启用测试的构建树里，make test 应先构建 all 再执行 CTest。
set(CMAKE_SKIP_TEST_ALL_DEPENDENCY FALSE)
include(CTest)

if(GALAY_KERNEL_BUILD_TESTS_COMPAT)
    message(DEPRECATION "BUILD_TESTS is deprecated; use BUILD_TESTING instead.")
endif()

# C++23 命名模块有效性判定（参考 galay-rpc 规则）
set(GALAY_KERNEL_CPP23_MODULES_EFFECTIVE FALSE)
set(GALAY_KERNEL_MODULES_SUPPORTED FALSE)
if(CMAKE_VERSION VERSION_GREATER_EQUAL 3.28)
    set(GALAY_KERNEL_MODULES_SUPPORTED TRUE)
endif()

set(GALAY_KERNEL_MODULES_GENERATOR_SUPPORTED FALSE)
if(CMAKE_GENERATOR MATCHES "Ninja" OR CMAKE_GENERATOR MATCHES "Visual Studio")
    set(GALAY_KERNEL_MODULES_GENERATOR_SUPPORTED TRUE)
endif()

set(GALAY_KERNEL_MODULES_COMPILER_SUPPORTED TRUE)
if(CMAKE_CXX_COMPILER_ID STREQUAL "AppleClang")
    set(GALAY_KERNEL_MODULES_COMPILER_SUPPORTED FALSE)
endif()

if(ENABLE_CPP23_MODULES AND NOT GALAY_KERNEL_MODULES_SUPPORTED)
    message(FATAL_ERROR "ENABLE_CPP23_MODULES requires CMake >= 3.28")
endif()

if(ENABLE_CPP23_MODULES AND NOT GALAY_KERNEL_MODULES_GENERATOR_SUPPORTED)
    message(WARNING "Generator '${CMAKE_GENERATOR}' does not support C++ modules; disabling ENABLE_CPP23_MODULES.")
endif()

if(ENABLE_CPP23_MODULES AND NOT GALAY_KERNEL_MODULES_COMPILER_SUPPORTED)
    message(WARNING "Compiler '${CMAKE_CXX_COMPILER_ID}' is not supported for modules in this project; disabling ENABLE_CPP23_MODULES.")
endif()

if(ENABLE_CPP23_MODULES
   AND GALAY_KERNEL_MODULES_SUPPORTED
   AND GALAY_KERNEL_MODULES_GENERATOR_SUPPORTED
   AND GALAY_KERNEL_MODULES_COMPILER_SUPPORTED)
    set(GALAY_KERNEL_CPP23_MODULES_EFFECTIVE TRUE)
endif()

# 设置构建类型
if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
endif()

# 编译选项
set(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -DDEBUG")
set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG")

# 设置输出目录
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

# 复制 scripts 目录到构建目录
file(COPY ${CMAKE_SOURCE_DIR}/scripts
     DESTINATION ${CMAKE_BINARY_DIR}
     FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

# 配置IO后端
configure_io_backend()

if(NOT GALAY_KERNEL_BACKEND)
    message(FATAL_ERROR "Failed to determine galay-kernel backend")
endif()

if(NOT GALAY_KERNEL_BACKEND STREQUAL "epoll"
   AND NOT GALAY_KERNEL_BACKEND STREQUAL "io_uring"
   AND NOT GALAY_KERNEL_BACKEND STREQUAL "kqueue")
    message(FATAL_ERROR "Unsupported galay-kernel backend: ${GALAY_KERNEL_BACKEND}")
endif()

message(STATUS "galay-kernel backend selected: ${GALAY_KERNEL_BACKEND}")

# 包含子目录
add_subdirectory(galay-kernel)

if(BUILD_TESTING)
    add_subdirectory(test)
endif()

if(BUILD_BENCHMARKS)
    add_subdirectory(benchmark)
endif()

if(BUILD_EXAMPLES)
    add_subdirectory(examples)
endif()
