cmake_minimum_required(VERSION 3.20)
project(galay-mongo VERSION 1.1.1 LANGUAGES CXX)

include(cmake/option.cmake)

message(STATUS "GALAY_MONGO_CXX_STANDARD: ${GALAY_MONGO_CXX_STANDARD}")
message(STATUS "GALAY_MONGO_BUILD_TESTS: ${GALAY_MONGO_BUILD_TESTS}")
message(STATUS "GALAY_MONGO_BUILD_EXAMPLES: ${GALAY_MONGO_BUILD_EXAMPLES}")
message(STATUS "GALAY_MONGO_BUILD_BENCHMARKS: ${GALAY_MONGO_BUILD_BENCHMARKS}")
message(STATUS "GALAY_MONGO_BUILD_SHARED_LIBS: ${GALAY_MONGO_BUILD_SHARED_LIBS}")
message(STATUS "GALAY_MONGO_INSTALL_MODULE_INTERFACE: ${GALAY_MONGO_INSTALL_MODULE_INTERFACE}")
message(STATUS "GALAY_MONGO_IMPORT_COMPILATION_ENABLED: ${GALAY_MONGO_IMPORT_COMPILATION_ENABLED}")
message(STATUS "GALAY_MONGO_BUILD_MODULE_EXAMPLES: ${GALAY_MONGO_BUILD_MODULE_EXAMPLES}")
message(STATUS "GALAY_MONGO_BUILD_MODULE_EXAMPLES_EFFECTIVE: ${GALAY_MONGO_BUILD_MODULE_EXAMPLES_EFFECTIVE}")

add_subdirectory(galay-mongo)
if(GALAY_MONGO_BUILD_TESTS)
    add_subdirectory(test)
endif()
if(GALAY_MONGO_BUILD_EXAMPLES)
    add_subdirectory(examples)
endif()
if(GALAY_MONGO_BUILD_BENCHMARKS)
    add_subdirectory(benchmark)
endif()
