function(galay_etcd_add_include_example target_name source_name)
    add_executable(${target_name} ${source_name})
    target_link_libraries(${target_name} PRIVATE galay-etcd)
    set_property(TARGET ${target_name} PROPERTY NO_SYSTEM_FROM_IMPORTED ON)
    galay_etcd_apply_cxx(${target_name})
endfunction()

function(galay_etcd_add_import_example target_name source_name)
    add_executable(${target_name} ${source_name})
    target_link_libraries(${target_name} PRIVATE galay-etcd-modules)
    set_property(TARGET ${target_name} PROPERTY NO_SYSTEM_FROM_IMPORTED ON)
    set_target_properties(${target_name} PROPERTIES CXX_SCAN_FOR_MODULES ON)
    galay_etcd_apply_cxx(${target_name})
endfunction()

galay_etcd_add_include_example(E1-SyncBasic include/E1-sync_basic.cc)
galay_etcd_add_include_example(E2-AsyncBasic include/E2-async_basic.cc)

if(GALAY_ETCD_IMPORT_COMPILATION_ENABLED AND TARGET galay-etcd-modules)
    galay_etcd_add_import_example(E1-SyncBasicImport import/E1-sync_basic.cc)
    galay_etcd_add_import_example(E2-AsyncBasicImport import/E2-async_basic.cc)
else()
    message(STATUS "Import examples are skipped (GALAY_ETCD_IMPORT_COMPILATION_ENABLED=OFF or galay-etcd-modules unavailable)")
endif()
